# PolyBot

./: .env.example  .gitignore  CLAUDE.md  kalbot.service  pyproject.toml
config/: default.toml  live.toml  paper.toml
models/: xgb_20260506_194156_cal.pkl  xgb_20260506_195917.model
plans/: CONTEXT.md  DEPLOY.md  PHASE_01.md  PHASE_02.md  PHASE_03.md  PHASE_04.md  PHASE_05.md  PHASE_06.md  PHASE_07.md  PHASE_08.md  PHASE_09.md  PHASE_10.md
scripts/: deploy.sh
src/kalbot/: config.py  kill_switch.py  main.py  types.py
src/kalbot/dashboard/: app.py
src/kalbot/dashboard/templates/: base.html  data.html  index.html  model.html  performance.html  settings.html
src/kalbot/dashboard/templates/partials/: data.html  live.html  model.html  performance.html
src/kalbot/data/: db.py  logger.py  schemas.py
src/kalbot/engine/: decision.py  ml_scorer.py  scorer.py  snapshot_builder.py  window_tracker.py
src/kalbot/execution/: __init__.py  adaptive.py  order_manager.py  paper.py  ramp.py
src/kalbot/feeds/: base.py  chainlink.py  polymarket.py  spot_feed.py
src/kalbot/ml/: __init__.py  backtest.py  calibrate.py  evaluate.py  features.py  train.py
src/kalbot/monitoring/: __init__.py  alerts.py  edge_monitor.py  live_monitor.py  metrics.py
src/kalbot/risk/: risk_manager.py
tests/unit/: test_kill_switch.py  test_logger.py  test_ramp.py  test_scorer.py  test_window_tracker.py
